# roift

./: .gitignore  CMakeLists.txt  benchmark_output.txt  oiftrelax  oiftrelax.cpp  vcpkg.json
experiments/: CMakeLists.txt  exp_26connect.cpp  exp_coarse_to_fine.cpp  exp_gaussian_rbf_relax.cpp  exp_geodesic_seeds.cpp  exp_gradient_weight.cpp
gft/: CMakeLists.txt  Makefile
gft/include/: dirent.h  fuzzycloud3.h  gft_adjrel3.h  gft_bzlib.h  gft_common.h  gft_compat.h  gft_debug.h  gft_dicom.h  gft_filelist.h  gft_fuzzycloud3.h  gft_ift.h  gft_scene32.h  gft_scene64.h  nifti1.h  nifti2_io.h  znzlib.h  znzlib1.h
gft/src/: gft_adjrel3f.cpp  gft_filelist.cpp  gft_fuzzycloud3.cpp  gft_ift.cpp  gft_scene32.cpp  gft_scene64.cpp  gft_seedmap3.cpp  nifti2_io.c  znzlib1.c
gft_delta/: CMakeLists.txt  benchmark_gpu.cpp  oiftrelax_gpu.cpp
gft_delta/include/: delta_stepping.cuh  delta_stepping.h  gaussian_blur_gpu.cuh  gaussian_blur_gpu.h  orelax_gpu.cuh  orelax_gpu.h
gft_delta/src/: delta_stepping.cu  gaussian_blur_gpu.cu  orelax_gpu.cu
gft_par/: CMakeLists.txt  benchmark.py  debug_compare.py
gft_par/src/: gft_ift_parallel.cpp
gpu/: CMakeLists.txt  oift_fmax_gpu.cu  oift_gpu.cu  oiftrelax_fmax_gpu.cpp  oiftrelax_gpu.cpp
